<resources>

    <!-- app wide -->
    <string name="app_name">Simply Words</string>
    <string name="main_activity_title">Word List</string>
    <string name="dict_activity_title">Simply Words</string>
    <string name="main_placeholder_text">Word list is empty, press \'\'+\'\' to add words.</string>
    <string name="dict_placeholder_text">There is no vocabulary group, press \'\'+\'\' to add.</string>

    <!-- MainActivity menu -->
    <string name="action_search">Search</string>
    <string name="action_sort_initial_letter">Sort Alphabetically</string>
    <string name="action_sort_rating">Sort by Rating</string>
    <string name="action_sort_created_date">Sort by Created Date</string>

    <!-- AddWordDialog -->
    <string name="add_word_dialog_title">Add Word</string>
    <string name="add_word_dialog_word_label">Word</string>
    <string name="add_word_dialog_definition_label">Definition</string>
    <string name="add_word_dialog_remark_label">Remark</string>
    <string name="add_word_dialog_rating_label">Rating</string>
    <string name="add_word_dialog_done_label">Add</string>
    <string name="add_word_dialog_cancel_label">Cancel</string>

    <!-- delete word dialog -->
    <string name="delete_word_dialog_title">Delete</string>
    <string name="delete_word_dialog_body">Are you sure you want to delete this word?</string>
    <string name="delete_word_dialog_positive">Delete</string>
    <string name="delete_word_dialog_negative">Cancel</string>

    <!-- ReviewWordDialog -->
    <string name="review_word_dialog_title">Review Word</string>
    <string name="review_word_dialog_word_label">Word</string>
    <string name="review_word_dialog_definition_label">Definition</string>
    <string name="review_word_dialog_remark_label">Remark</string>
    <string name="review_word_dialog_rating_label">Rating</string>
    <string name="review_word_dialog_done_label">Done</string>

    <!-- EditWordDialog -->
    <string name="edit_word_dialog_title">Edit Word</string>
    <string name="edit_word_dialog_done_label">Save</string>
    <string name="edit_word_dialog_cancel_label">Cancel</string>
    <string name="title_activity_dict">DictActivity</string>

    <!-- AddDictDialog -->
    <string name="add_dict_dialog_title">Add Group</string>
    <string name="add_dict_dialog_name_label">Name</string>
    <string name="add_dict_dialog_cancel_label">Cancel</string>
    <string name="add_dict_dialog_done_label">Add</string>

    <!-- EditDictDialog -->
    <string name="edit_dict_dialog_title">Edit Group</string>
    <string name="edit_dict_dialog_cancel_label">Cancel</string>
    <string name="edit_dict_dialog_done_label">Save</string>

    <!-- delete dict dialog -->
    <string name="delete_dict_dialog_title">Delete Group</string>
    <string name="delete_dict_dialog_message">Are you sure you want to delete this group?</string>
    <string name="delete_dict_dialog_cancel_label">Cancel</string>
    <string name="delete_dict_dialog_done_label">Delete</string>

    <!-- messages -->
    <string name="dict_message_empty_dict_name">Group name can not be empty.</string>
    <string name="dict_message_duplicate_dict_name">Group name already exists.</string>
    <string name="dict_message_rename_dict_error">Failed to edit group name.</string>
    <string name="main_message_empty_word_name">Word can not be empty.</string>

</resources>
